# decoupler-mcp

./: README.md  pyproject.toml
src/decoupler_mcp/: __main__.py  cli.py  logging_config.py  util.py
src/decoupler_mcp/schema/: __init__.py  __int__.py  inference.py  pl.py
src/decoupler_mcp/server/: __init__.py  inference.py  io.py  pl.py  rag.py  util.py
tests/: conftest.py  test_inference.py  test_io.py
